
-------------
Testing and fixes for  Bug 27 -  In IRODSFileSystem, rule execution method always returns a String

Corrected response to CL_PUT_ACTION and CL_GET_ACTION, which was being invoked even when a client request was not being returned.
Adding new methods in IRODSFile and Rule to allow rules to be invoked with the rule as a String, as opposed to an InputStream.  Added a method
to return the rule invocation as a Map<String, String> as well as a Map<String, Object> based on user requests.

Also note that new methods were added to IRODSFileSytem to execute rules with the rule text in a string parameter, versus the former InputStream.

-------------
Additional tests developed for 2.1 through 2.3 compatibility testing, and for other reported issues

-------------
Testing and fix for Bug 46 - Querying multiple metadata values returns no result

-------------
Feature request  Bug 49 -  -R option to specify resource on a get  (edit)  
Added a new method to IRODSFile to provide the same functionality as an iget -R option, allowing you to specify the particular resource to 'get' the file from 	

public void copyTo(GeneralFile file, boolean forceOverwrite, String resource)

-------------
Tests for  Bug 45 -  SYS_UNMATCHED_API_NUM (-12000) when attempting to get a file

-------------
A large number of 'small' fixes and cleanups
	
================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org
